# etfscraper

./: .gitignore  README.md  etfscraper.py  pyproject.toml
providers/: advisorshares.py  allianz.py  amundi.py  ark.py  capitalgroup.py  charlesschwab.py  cschwab.py  defiance.py  dimensional.py  direxion.py  dws.py  etc.py  etfmg.py  expat.py  fidelity.py  finex.py  firsttrust.py  franklintempleton.py  globalx.py  goldmansachs.py  hanetf.py  horizons.py  indexiq.py  innovator.py  invesco.py  ishares.py  jpmorgan.py  lgim.py  pacer.py  proshares.py  schwab.py  sprott.py  ssga.py  ubs.py  vaneck.py  vanguard.py  wisdomtree.py
