[tool.poetry]
name = "etfscraper"
version = "1"
description = "This script saves you time when searching for Exchange Traded Funds (5000+ ETFs). No need to spend hours browsing providers' websites or wondering if aggregators' lists are up to date."
authors = ["Lukas-Ldc <78859408+Lukas-Ldc@users.noreply.github.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.2"
selenium = "4.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
